--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   font-family: sans-serif;
   font-size: 20px;
-  background-color: gray;
+  background-color: #aa1111;
 }
 
 .heading {
@@ -39,7 +39,7 @@ body {
   width: 300px;
   height: 40px;
   border: none;
-  background-color: gray;
+  background-color: white;
   border-bottom: 1px solid white;
   margin-bottom: 20px;
 }
@@ -54,7 +54,8 @@ body {
   border: none;
   background-color: black;
   color: white;
-  height: 25px;
+  height: 35px;
   margin-bottom: 20px;
+  padding: 5px;
   width: 300px;
 }
