--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-size: 18px;
 }
 
 body {
@@ -12,11 +13,53 @@ body {
 	align-items: center;
 	font-family: sans-serif;
 	font-size: 20px;
+	background-image: url("../images/background.jpg"), linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+	background-blend-mode: overlay;
+	background-position: center;
+	background-size: cover;
+}
+
+::selection {
 	background-color: #aa1111;
+	color: white;
+}
+
+button {
+	border: none;
+	background-color: #3a3a3a;
+	border-radius: 5px;
+	color: white;
+	height: 50px;
+	width: 400px;
+	margin-bottom: 20px;
+	padding: 5px;
+}
+
+input {
+	text-align: center;
+	font-size: 30px;
+	width: 400px;
+	height: 40px;
+	border: none;
+	border-bottom: 1px solid white;
+	margin-block: 25px;
+}
+
+input:focus {
+	outline: none;
+	border: none;
+	border-bottom: 1px solid black;
 }
 
 .heading {
+	color: white;
+	font-size: 50px;
 	margin-bottom: 30px;
+}
+
+.heading::after {
+	content: 'ToGuess';
+	color: #aa1111;
 }
 
 .play-area {
@@ -24,38 +67,27 @@ body {
 }
 
 .word {
+	font-size: 30px;
+	color: white;
 	text-align: center;
-	margin-bottom: 50px;
+	line-height: 10px;
+	margin-bottom: 20px;
+	transition: all 0.5s;
+	transition-timing-function: ease-in-out;
+	transform: scale(0.8, 0.8);
+}
+
+.word::after {
+	content: '__________';
+	color: #aa1111;
+	display: block;
+}
+
+.word:hover {
+	transform: scale(1, 1);
 }
 
 .player-area {
 	display: flex;
 	flex-direction: column;
-}
-
-.entered-guess {
-	text-align: center;
-	font-size: 30px;
-	width: 300px;
-	height: 40px;
-	border: none;
-	background-color: white;
-	border-bottom: 1px solid white;
-	margin-bottom: 20px;
-}
-
-.entered-guess:focus {
-	outline: none;
-	border: none;
-	border-bottom: 1px solid black;
-}
-
-.btns {
-	border: none;
-	background-color: black;
-	color: white;
-	height: 35px;
-	margin-bottom: 20px;
-	padding: 5px;
-	width: 300px;
 }
