--- a/frontend/style.css
+++ b/frontend/style.css
@@ -13,7 +13,7 @@ body {
 	align-items: center;
 	font-family: sans-serif;
 	font-size: 20px;
-	background-image: url("../images/background.jpg"), linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+	background-image: url("./images/background.jpg"), linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 	background-blend-mode: overlay;
 	background-position: center;
 	background-size: cover;
